# mdx2-workflows

./: .env.example  .gitignore  Dockerfile  Dockerfile.jhub  Dockerfile.notebook  Dockerfile.source  README.md  docker-compose.yml  env.yaml  pyproject.toml
.github/: Dockerfile
.github/workflows/: docker.yml
docs/: upgrading-the-jhub-image.md  upgrading-the-notebook-image.md
mdx2_workflows/: dials_flow.py  pipeline.py
prefect/: PREFECT_USAGE.md  RAW_DATA_PROCESSING.md  prefect_flows.py  run_mdx2_prefect.py
